fixed contrast error

--- a/styles/place.css
+++ b/styles/place.css
@@ -52,6 +52,7 @@ footer {
     background-color: red;
     color: white;
     text-align: center;
+    font-weight: bold;
     border-top: 3px solid black;
     padding: 10px;
 }
